tests/compile_errors/024-misplaced-out.buzz
| `out` statement is only allowed inside a block expression
test "misplaced out statement" {
    out "not allowed";
}